# ds-search

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  agents.md
.factory/skills/ds-search/: SKILL.md
.github/workflows/: ci.yml
adapters/bilibili/: Cargo.toml
adapters/bilibili/src/: models.rs  semantics.rs
adapters/deepseek/: Cargo.toml
adapters/deepseek/src/: lib.rs  models.rs  semantics.rs
adapters/deepseek/tests/: integration.rs  mock_server.rs
adapters/gemini/: Cargo.toml
adapters/gemini/src/: semantics.rs
adapters/gemini/tests/: gemini.rs
adapters/google/: Cargo.toml
adapters/google-aistudio/: Cargo.toml
adapters/google-aistudio/src/: lib.rs  models.rs  semantics.rs
adapters/google-aistudio/tests/: aistudio.rs
adapters/google/src/: lib.rs  models.rs  semantics.rs
adapters/grok/: Cargo.toml
adapters/grok/src/: models.rs  semantics.rs
adapters/grok/tests/: grok.rs
adapters/wallstreet/: Cargo.toml
adapters/wallstreet/src/: lib.rs  models.rs  semantics.rs
adapters/weread/: Cargo.toml
adapters/weread/src/: lib.rs  models.rs  semantics.rs
adapters/x/: Cargo.toml
adapters/x/src/: lib.rs  models.rs  semantics.rs
bilibili/: Cargo.toml
bilibili/src/: lib.rs  models.rs  semantics.rs
cli/: Cargo.toml
cli/src/: main.rs  types.rs
cli/src/handlers/: aistudio.rs  bilibili.rs  deepseek.rs  gemini.rs  google.rs  grok.rs  livenews.rs  meta.rs  mod.rs  raw.rs  status.rs  wallstreet.rs  weread.rs  x.rs
deepseek/: Cargo.toml
deepseek/src/: bridge.rs  semantics.rs
gemini/: Cargo.toml
gemini/src/: lib.rs
google/: Cargo.toml
grok/: Cargo.toml
grok/src/: lib.rs
knowledge/: aistudio.google.com.yaml  chat.deepseek.com.yaml  gemini.google.com.yaml  www.bilibili.com.yaml  www.google.com.yaml  www.wallstreetcn.com.live-global.yaml  www.wallstreetcn.com.yaml  www.weread.qq.com.yaml  x.com.i.grok.yaml  x.com.yaml
knowledge/scans/: aistudio-baseline.json  deepseek-baseline.json  gemini-baseline.json  grok-baseline.json
pilot/: Cargo.toml
pilot/src/: error.rs  kimi.rs  lib.rs  logging.rs  models.rs  verify.rs
pilot/tests/: kimi.rs
wallstreet/: Cargo.toml
wallstreet/src/: lib.rs
weread/: Cargo.toml
weread/src/: semantics.rs
