[package]
name = "ds"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for browser-automation via Kimi WebBridge"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
pilot = { path = "../pilot" }
deepseek = { path = "../adapters/deepseek" }
grok = { path = "../adapters/grok" }
gemini = { path = "../adapters/gemini" }
bilibili = { path = "../adapters/bilibili" }
wallstreet = { path = "../adapters/wallstreet" }
weread = { path = "../adapters/weread" }
google = { path = "../adapters/google" }
google-aistudio = { path = "../adapters/google-aistudio" }
x = { path = "../adapters/x" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
reqwest.workspace = true
