[package]
name = "gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gemini adapter — interact with gemini.google.com via Kimi WebBridge"

[dependencies]
pilot = { path = "../pilot" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
