[package]
name = "google"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Google Search adapter — query, results, snippets, pagination"

[dependencies]
pilot = { path = "../pilot" }
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
