[package]
name = "pilot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Site-agnostic browser automation primitives via Kimi WebBridge"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
