[package]
name = "deepseek"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DeepSeek adapter — interact with chat.deepseek.com via Kimi WebBridge"

[dependencies]
pilot = { path = "../../pilot" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
