[package]
name = "grok"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Grok adapter — interact with x.com/i/grok via Kimi WebBridge"

[dependencies]
pilot = { path = "../../pilot" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
