[package]
name = "x"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "X.com (Twitter) tweet thread adapter"

[dependencies]
pilot = { path = "../../pilot" }
tokio.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
